--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,15 @@ dependencies:
   get: ^4.3.8
   http: ^0.13.3
   transparent_image: ^2.0.0
+  hexcolor: ^2.0.5
+  carousel_slider: ^4.0.0
+  smooth_page_indicator: ^1.0.0+2
+  flutter_layout_grid: ^1.0.3
+  flutter_email_sender: ^5.0.2
+  url_launcher: ^6.0.9
+  cached_network_image: ^3.1.0
+#  photo_view: ^0.12.0
+  gallery_view: ^1.0.0+1
 
 dev_dependencies:
   flutter_test:
