--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=3.1.3 < 4.0.0"
 
 dependencies:
   flutter:
@@ -27,19 +27,18 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
-  get: ^4.3.8
-  http: ^0.13.3
-  transparent_image: ^2.0.0
-  hexcolor: ^2.0.5
-  carousel_slider: ^4.0.0
-  smooth_page_indicator: ^1.0.0+2
-  flutter_layout_grid: ^1.0.3
-  flutter_email_sender: ^5.0.2
-  url_launcher: ^6.0.9
-  cached_network_image: ^3.1.0
-#  photo_view: ^0.12.0
-  gallery_view: ^1.0.0+1
+  cupertino_icons: 
+  get: 
+  http: 
+  transparent_image: 
+  hexcolor: 
+  carousel_slider: 
+  smooth_page_indicator: 
+  flutter_layout_grid: 
+  url_launcher: 
+  cached_network_image: 
+  #photo_view:
+  gallery_image_viewer:
 
 dev_dependencies:
   flutter_test:
